<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/tv_modUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfuibold"
        android:text="@string/tv_loginLogo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/tf_chooseEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:ems="10"
        android:fontFamily="@font/sfuiregular"
        android:hint="@string/tf_user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_modUser" />

    <EditText
        android:id="@+id/tf_mousePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security"
        android:ems="10"
        android:fontFamily="@font/sfuiregular"
        android:hint="@string/tf_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_chooseEmail" />

    <Button
        android:id="@+id/btn_mouseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/morado_lp"
        android:fontFamily="@font/sfuibold"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_mousePassword" />

    <TextView
        android:id="@+id/tv_dontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sfuiregular"
        android:text="@string/tv_urntregister"
        app:layout_constraintEnd_toEndOf="@+id/tf_mousePassword"
        app:layout_constraintStart_toStartOf="@+id/tf_mousePassword"
        app:layout_constraintTop_toBottomOf="@+id/btn_mouseBtn" />

    <CheckBox
        android:id="@+id/cb_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/morado_lp"
        android:checked="true"
        android:fontFamily="@font/sfuiregular"
        android:text="@string/cb_logged"
        app:layout_constraintEnd_toEndOf="@+id/tf_mousePassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tf_mousePassword"
        app:layout_constraintTop_toBottomOf="@+id/tf_mousePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>